SDB Change Log
==============

Homepage:
    http://jena.sf.net/SDB
Documentation:
    http://jena.hpl.hp.com/wiki/SDB

SDB v1.1
========

+ SPARQL/Update support 

+ Jar upgrades: 
    commons-logging-1.1.1
    new versions ARQ and Jena jars (no name changes).
    
+ MySQL : Node table schema changed to be LONGTEXT.  In v1.0 literals longer than 64K caused errors.
  Old databases layouts continue to work.  Ideally, reformat and reload. 
    
**** The named graph indexing has been improved ****
  Old databases still work but ideally should be reindexed.
  
  Migration: drop indexes with SBD 1.0 tools, create indexes with SDB 1.1 tools
  Manaual deletion of all secondary indexes via DB admin tools also will work 

+ Assembler structures clarified.  [document on wiki]

+ SQL code generation made more regular.

+ H2 support

SDB v1.0
========

+ DB2 support
+ Fix: Transaction handling
+ More testing

SDB Beta 2
==========

+ Joseki integration - example joseki-config-sdb.ttl in Joseki CVS.
  Requires post-3.1 version of Joseki for jar upgrades.
+ Command tidy up; wider use of --time.
+ Settable SQL fetchSize : context setting SDB.jdbcFetchSize. 

SDB Beta 1
==========

+ Support for named graphs.
  In order to use named graphs, SDB stores must be reformatted and reloaded.
  SDB-alpha stores and queries should continue to work but rebuilding
  the store is recommended. 

Databases supported in this release:
+ Oracle 10gR2, Microsoft SQL Server 2005, PostgreSQL 8.2,
  MySQL 5.0 , Apache Derby 10.2, HSQLDB 1.8.
  Please report earlier versions that pass the test suite.

+ Database schema change for Microsoft SQL Server for new databases to
  allow full internationalization support.  Old databases continue to work.
  Reformatting and reloading data recommended.


SDB Alpha 2
===========

The namespace for store description assembler files is
now <http://jena.hpl.hp.com/2007/sdb#>.  This is a change from
alpha-1.